# twinbeam-setup

./: .gitignore
Code/: CNNTesting.cu  CUDAwithFFT.cu  GetTrainingData.cu  Kernels.cu  Kernels.h  Process.cu  Process.mexw64  camera.m  getTrainingData.m  kernelGenerator.m  main.m  showPictures.m  tcpClient.m  twinbeam.m
Experiments/oneBead_01-compareForces/: simout_data.mat  simout_data_2.mat  simout_data_3.mat  visu.m
Experiments/oneBead_02-compareForces/: simout_data.mat  simout_data_2.mat  visu.m
Experiments/oneBead_03_compareForces/: simout_data_18052020_02_frameid.mat  simout_data_18052020_03_frameid.mat  visu.m
GeneratorControl/: genControl.c  genControl.h  genDaemon.cpp  genTest.cpp  generator.py  generator_test.py  packet_receiver.py
GeneratorControl/py/: generator.py  generator_test.py  packet_receiver.py
HostCode/: H.mat  coordinates_test.m  generator.m  init.m  maxF.mat  recordPositionsExperiment.m  twinbeam.m
HostCode/SimulinkControlScheme/: controlScheme.slx  controlScheme_2Beads.slx  controlScheme_3Beads.slx  controlScheme_DS.slx  controlScheme_UDP.slx  controlScheme_UDP_3Beads.slx  controlScheme_UDP_4Beads.slx  controlScheme_height.slx
HostCode/SimulinkControlScheme/block_library/: TB_blk_library.slx  compile.m  sfTCPgenerator.c  sfTCPposition.c
HostCode/SimulinkControlScheme/rttarget/: controlScheme_rt.slx  run_model.sh
HostCode/backProp/: demo.m  rsBackPropMud_fun.m
HostCode/classes/: generator.m  twinbeam.m
HostCode/forceModel/: ExElab.m  Exf.m  EyElab.m  Eyf.m  EzElab.m  Ezf.m  PsixxElab.m  Psixxf.m  PsixyElab.m  Psixyf.m  PsixzElab.m  Psixzf.m  PsiyyElab.m  Psiyyf.m  PsiyzElab.m  Psiyzf.m  PsizzElab.m  Psizzf.m  giveMeForce.m  giveMeForcePO.m  modelMatrices.m  modelMatricesGammaLambda.m  modelMatricesPsiOmega.m  phi.m  phiElab.m  potDeriv_baseEl.m  potDeriv_baseEl_ab.m  potDeriv_baseEl_ab_optim.m  potDeriv_baseEl_optim.m  potDeriv_oneEl.m  potDeriv_oneEl_ab.m
HostCode/heightModel/: heightModel.m
HostCode/max_forces_8way/: clipTheForce.m  clipTheForce_nearest.m  plot_ForceSet.m  step25_8way_max_forces_bottom.csv  step25_8way_max_forces_bottom.mat  step25_8way_max_forces_bottom_left.csv  step25_8way_max_forces_bottom_left.mat  step25_8way_max_forces_bottom_right.csv  step25_8way_max_forces_bottom_right.mat  step25_8way_max_forces_left.csv  step25_8way_max_forces_left.mat  step25_8way_max_forces_right.csv  step25_8way_max_forces_right.mat  step25_8way_max_forces_top.csv  step25_8way_max_forces_top.mat  step25_8way_max_forces_top_left.csv  step25_8way_max_forces_top_left.mat  step25_8way_max_forces_top_right.csv  step25_8way_max_forces_top_right.mat  test_clipTheForce.m  visu.m
HostCode/optim/: findPhasesFoGivenF.m  findPhasesFoGivenF_restart.m  jac.m  jacPO.m  jacPO_2xSym.m
HostCode/tests/: Force_Jac_test.m  Force_objSeparation_test.m  Force_optim_test.m  coordinates_test.m  coordsUDPtest.m  genUDPtest.m  imgUDPtest.m  maximumForce.m  udpTestCoords.slx  udpTestGenerator.slx
HostCode/utils/: plotElArray.m
JetsonCode/: .Trial.cu.swm  .Trial.cu.swn  .Trial.cu.swo  .Trial.cu.swp  3D_scanning  AppData.cpp  AppData.h  ArgusInit.cpp  ArgusInit.h  BackPropagator.cpp  BackPropagator.cu  BackPropagator.h  BackPropagator.hpp  BeadTracker.cpp  BeadTracker.h  BeadsFinder.cu  BeadsFinder.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CameraController.cpp  CameraController.cu  CameraController.h  ColorChannel.cu  ColorChannel.h  DartConfiguration.tcl  Definitions.h  FindArgus.cmake  ImageData.cu  ImageData.h  Input.cpp  Input.h  Installation and Dependencies  Installation_and_Dependencies.md  Kernel.cu  Kernel.h  Kernels.cu  Kernels.h  Makefile  Misc.cpp  (+35 more)
JetsonCode/include/: AppData.h  BackPropagator.h  BeadTracker.h  BeadsFinder.h  CameraController.h  Definitions.h  Globals.h  ImageData.h  Kernels.h  Misc.h  Params.h  Phase_Kernels.h  blur.h  cudaDebug.h  fista.h  imgproc_thread.h  keyboard_thread.h  network.h
JetsonCode/src/: AppData.cpp  BackPropagator.cu  BeadsFinder.cu  CameraController.cu  ImageData.cu  Kernels.cu  Params.cpp  Phase_Kernels.cu  blur.cu  camera_thread.cu  cudaDebug.cu  display_thread.cu  fista.cu  imgproc_thread.cu  keyboard_thread.cpp  network.cpp
WebApp/: tb-web.service  webapp.py
WebApp/static/: main.js  theme.css
WebApp/templates/: main.html
